<resources>
  <string name="app_name">SIACDM</string>
  <string name="title_activity_login">SIACDM</string>

  <string name="siacdm_shared_preferences">SIACDMSharedPreferences</string>
  <!-- Strings related to login -->
  <string name="prompt_email">User ID</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_out">Sign out</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">User ID is invalid</string>
  <string name="error_invalid_password">Password is too short</string>
  <string name="error_incorrect_password">Password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

  <!--Strings Related to User Validation-->
  <string name="UserIDString">User ID is Required</string>
  <string name="UserPassword">Password is Required</string>

  <string name="title_activity_main">SIACDM</string>
  <string name="title_activity_tasks">Tasks</string>
  <string name="title_activity_schedules">Schedules</string>
  <string name="title_activity_users">Users</string>
  <string name="title_activity_task_detail">Task Detail</string>
  <string name="title_activity_user_detail">User Detail</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="action_create_new">Create New</string>
  <string name="action_go_week">Go to</string>
  <string name="action_copy_week">Copy Week</string>
  <string name="action_save">Save</string>
  <string name="action_delete">Delete</string>
  <string name="action_copy">Copy</string>

  <string name="action_chat">Chat</string>
  <string name="action_call">Call</string>
  <string name="action_photo">Capture</string>
  <string name="action_map">Location</string>

  <string name="RolesText">Roles</string>


  <!--Roles Dialogue box-->
  <string name="ok_label">OK</string>
  <string name="dismiss_label">Dismiss</string>
  <string name="clear_all_label">Clear</string>

  <string name="Technician">Technician</string>
  <string name="Supervisor">supervisor</string>
  <string name="SystemAdmin">admin</string>
  <string name="name_of_user">Name of User</string>
  <string name="password">Password</string>
  <string name="user_id">User ID</string>
  <string name="viewSchedules">Schedules</string>

  <string-array name="Roles">
    <item>admin</item>
    <item>supervisor</item>
    <item>technician</item>
  </string-array>
</resources>
