<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:title="@string/action_chat"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:title="@string/action_call"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_photo"
        android:orderInCategory="100"
        android:title="@string/action_photo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="never"/>



</menu>

